--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Users/Create.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Users/Create.cshtml
@@ -28,7 +28,12 @@
             </div>
             <div class="form-group">
                 <label for="Rol" class="control-label">Role</label>
-                <input name="Rol" id="Rol" class="form-control" required />
+                <select name="Rol" id="Gender" class="form-control" required>
+                    <option value="">-- Select Role --</option>
+                    <option value="Admin">Admin</option>
+                    <option value="Employee">Employee</option>
+                    <option value="Customer">Customer</option>
+                </select>
             </div>
 
             <h4>Person</h4>
