--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/CustomerPerson/Details.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/CustomerPerson/Details.cshtml
@@ -1,38 +1,70 @@
 ﻿@model Proyecto_Gimnasio.Models.User
-
 @{
     ViewData["Title"] = "Details";
 }
-
 <h1>Details</h1>
-
 <div>
-    <h4>User</h4>
+    <h4>Customer</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.primarySession)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.primarySession)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Rol)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Rol)
+        </dd>
+    </dl>
+
+    <h4>Person</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            NAME
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Person?.Name
+        </dd>
+        <dt class="col-sm-2">
+            LAST NAME
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Person?.LasName
+        </dd>
+        <dt class="col-sm-2">
+            SECOND LAST NAME
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Person?.SecondLastName
+        </dd>
+        <dt class="col-sm-2">
+            Date of Birth
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Person?.DateBirthay.ToShortDateString()
+        </dd>
+        <dt class="col-sm-2">
+            CNIT
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Person?.Cnit
+        </dd>
+        <dt class="col-sm-2">
+            Gender
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Person?.Gender
         </dd>
     </dl>
 </div>
