--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Users/Create.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Users/Create.cshtml
@@ -28,12 +28,23 @@
             </div>
             <div class="form-group">
                 <label for="Rol" class="control-label">Role</label>
-                <select name="Rol" id="Gender" class="form-control" required>
-                    <option value="">-- Select Role --</option>
-                    <option value="Admin">Admin</option>
-                    <option value="Employee">Employee</option>
-                    <option value="Customer">Customer</option>
-                </select>
+                @if (ViewBag.IsEmployee == true)
+                {
+                   
+                    <select name="Rol" id="Rol" class="form-control" required>
+                        <option value="Customer">Customer</option>
+                    </select>
+                }
+                else
+                {
+                   
+                    <select name="Rol" id="Rol" class="form-control" required>
+                        <option value="">-- Select Role --</option>
+                        <option value="Admin">Admin</option>
+                        <option value="Employee">Employee</option>
+                        <option value="Customer">Customer</option>
+                    </select>
+                }
             </div>
 
             <h4>Person</h4>
