--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Products/Create.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Products/Create.cshtml
@@ -10,18 +10,28 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="NameProduct" class="control-label"></label>
                 <input asp-for="NameProduct" class="form-control" />
                 <span asp-validation-for="NameProduct" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input asp-for="ImageFile" type="file" class="form-control"
+                       onchange="previewImage(this,'imgPreviewCreate')" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
+
+
+            <div class="form-group">
+                <img id="imgPreviewCreate" style="max-width:150px;max-height:150px;display:none;" />
+            </div>
+
+            <input asp-for="Image" type="hidden" />
+
             <div class="form-group">
                 <label asp-for="Stock" class="control-label"></label>
                 <input asp-for="Stock" class="form-control" />
@@ -39,7 +49,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdCategory" class="control-label"></label>
-                <select asp-for="IdCategory" class ="form-control" asp-items="ViewBag.IdCategory"></select>
+                <select asp-for="IdCategory" class="form-control" asp-items="ViewBag.IdCategory"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -53,5 +63,21 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
+    <script>
+        function previewImage(input, imgId) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    var img = document.getElementById(imgId);
+                    img.style.display = 'block';
+                    img.src = e.target.result;
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+    </script>
 }
