Venta de product

--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Shared/_Layout.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Shared/_Layout.cshtml
@@ -30,7 +30,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="SalePlan" asp-action="Index">Sale Plans</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SaleProduct" asp-action="Index">Sale Product</a>
                         </li>
                     </ul>
                 </div>
