--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Acceso/Login.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Acceso/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = null; 
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -9,7 +9,7 @@
     <title>Login - Gimnasio</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
-<body class="bg-primary d-flex justify-content-center align-items-center" style="height: 100vh;">
+<body class="bg-white d-flex justify-content-center align-items-center" style="height: 100vh;">
 
     <div class="card shadow p-4" style="width: 350px; background-color: white; border-radius: 15px;">
         <div class="text-center mb-4">
@@ -36,6 +36,8 @@
             }
 
             <button type="submit" class="btn btn-dark w-100 mt-3">Ingresar</button>
+
+            <button type="submit " class="btn  btn-dark  w-100 mt-3">Registrarse </button>
         </form>
     </div>
 
