Nuevo Controller Register Plans Modificaso saleProducts

--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Acceso/Login.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Acceso/Login.cshtml
@@ -37,7 +37,9 @@
 
             <button type="submit" class="btn btn-dark w-100 mt-3">Ingresar</button>
 
-            <button type="submit " class="btn  btn-dark  w-100 mt-3">Registrarse </button>
+            <a asp-controller="UserRegister" asp-action="Create" class="btn btn-secondary">
+                Registrarse
+            </a>
         </form>
     </div>
 
