--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/UserRegister/Create.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/UserRegister/Create.cshtml
@@ -60,6 +60,11 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+            <div class="form-group mb-3">
+                <label asp-for="Password" class="control-label">Password</label>
+                <input name="Password" id="Password" class="form-control" type="password" required />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
 
             <div class="form-group">
                 <input type="submit" value="Register" class="btn btn-primary w-100" />
