--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Shared/_Layout.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="SalePlan" asp-action="Index">Sale Plans</a>
                             </li>
                         }
-                        @if (User.IsInRole("Admin"))
+                        @if (User.IsInRole("Admin") || User.IsInRole("Employee"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
